--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+</body>
+</html>
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World!</title>
     <link rel="stylesheet" href="bluestyle.css" />
   </head>
